log
Thu 07 Sep 2023 06:50:52 PM UTC: 
 tests:  0|6
total_score: 0/70
9f29367
Thu 07 Sep 2023 06:56:59 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:19: error: ‘Key’ undeclared (first use in this function)
   55 |   HashMap* Map = (Key*)malloc(capacity)
      |                   ^~~
hashmap.c:55:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:23: error: expected expression before ‘)’ token
   55 |   HashMap* Map = (Key*)malloc(capacity)
      |                       ^
hashmap.c:55:12: error: unused variable ‘Map’ [-Werror=unused-variable]
   55 |   HashMap* Map = (Key*)malloc(capacity)
      |            ^~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e69fd30
Thu 07 Sep 2023 06:57:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:3: error: expected ‘,’ or ‘;’ before ‘return’
   57 |   return Map;
      |   ^~~~~~
hashmap.c:55:12: error: unused variable ‘Map’ [-Werror=unused-variable]
   55 |   HashMap* Map = malloc(capacity)
      |            ^~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
984b204
Thu 07 Sep 2023 06:57:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
65f7db5
Thu 07 Sep 2023 06:59:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8fe48e4
Thu 07 Sep 2023 07:02:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a611fa0
Thu 07 Sep 2023 07:05:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘Map’
   55 |   Map* Map = (Map*)malloc(sizeof(Map)*capacity);
      |   ^~~
hashmap.c:55:19: error: expected expression before ‘)’ token
   55 |   Map* Map = (Map*)malloc(sizeof(Map)*capacity);
      |                   ^
hashmap.c:57:10: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   57 |   return Map;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
5e8156e
Thu 07 Sep 2023 07:07:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dfb10b4
